# presentations

./: .gitignore  readme.md
basic-fp-for-beginners/: readme.md
basic-fp-for-beginners/code/: readme.md
basic-fp-for-beginners/code/hs/: hs.cabal
basic-fp-for-beginners/code/hs/src/: Main.hs  Solution.hs
basic-fp-for-beginners/code/js/: package.json  readme.md
basic-fp-for-beginners/code/js/solution/: functional-1.js  functional-2.js  imperative.js
basic-fp-for-beginners/code/js/solution/lib/: fp.js
basic-fp-for-beginners/code/js/test/: functional-1.test.js  functional-2.test.js
basic-fp-for-beginners/code/js/tests/: imperative.test.js
basic-fp-for-beginners/code/php/: composer.json  readme.md
basic-fp-for-beginners/code/php/solution/: functional-1.php  imperative.php
basic-fp-for-beginners/code/php/solution/lib/: fp.php
basic-fp-for-beginners/code/php/tests/: functional-1Test.php  imperativeTest.php
