name:                haskell-solution
version:             0.1.0.0
homepage:            https://github.com/well1791/presentations/basic-fp-for-beginners/code/hs#readme
author:              Wellington Mendoza
maintainer:          wellington.mendoza.contact@gmail.com
copyright:           2017 Wellington Mendoza
category:            Sample
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable runSolution
  hs-source-dirs:      src
  main-is:             Solution.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
